Add YourKit instrumentation to build benchmarks
Bug: 150138679
Test: manually ran yourkit enabled benchmarks
Change-Id: I36c014cada50d153ba358b6f1d22637a336271c5

--- a/.gitattributes
+++ b/.gitattributes
@@ -630,6 +630,7 @@
 *.log filter=lfs diff=lfs merge=lfs -text
 /build-system/gradle-core/src/apiTest/resources/gradlew filter=lfs diff=lfs merge=lfs -text
 /dynamic-layout-inspector/common/BUILD filter=lfs diff=lfs merge=lfs -text
+/yourkit-controller/WORKSPACE filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
