--- a/.gitattributes
+++ b/.gitattributes
@@ -629,6 +629,7 @@
 /build-system/integration-test/test-projects/sourceDependency/simple-git-repo/gitdir/refs/heads/main filter=lfs diff=lfs merge=lfs -text
 *.log filter=lfs diff=lfs merge=lfs -text
 /build-system/gradle-core/src/apiTest/resources/gradlew filter=lfs diff=lfs merge=lfs -text
+/dynamic-layout-inspector/common/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
