Add DdmlibAndroidDeviceProvider and use it from AGP
Test: unit tests added and tested manually
Fixes: 174764926
Change-Id: Ia2882f27c0594720dd5e131931d67a460852c329

--- a/.gitattributes
+++ b/.gitattributes
@@ -639,6 +639,8 @@
 /dynamic-layout-inspector/skia/BUILD filter=lfs diff=lfs merge=lfs -text
 /dynamic-layout-inspector/skia/proto/BUILD filter=lfs diff=lfs merge=lfs -text
 /bazel/perfetto_cfg/OWNERS filter=lfs diff=lfs merge=lfs -text
+/utp/android-device-provider-ddmlib/BUILD filter=lfs diff=lfs merge=lfs -text
+*.DeviceProvider filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
