--- a/.gitattributes
+++ b/.gitattributes
@@ -634,6 +634,9 @@
 /ddmlib/src/main/native/profileable_reporter/BUILD filter=lfs diff=lfs merge=lfs -text
 /ddmlib/OWNERS filter=lfs diff=lfs merge=lfs -text
 /deploy/sites/BUILD filter=lfs diff=lfs merge=lfs -text
+/dynamic-layout-inspector/agent/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
+/dynamic-layout-inspector/agent/transport/BUILD filter=lfs diff=lfs merge=lfs -text
+/dynamic-layout-inspector/skia/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
