--- a/.gitattributes
+++ b/.gitattributes
@@ -641,6 +641,8 @@
 /bazel/perfetto_cfg/OWNERS filter=lfs diff=lfs merge=lfs -text
 /utp/android-device-provider-ddmlib/BUILD filter=lfs diff=lfs merge=lfs -text
 *.DeviceProvider filter=lfs diff=lfs merge=lfs -text
+/dynamic-layout-inspector/agent/appinspection/BUILD filter=lfs diff=lfs merge=lfs -text
+/dynamic-layout-inspector/agent/appinspection/proto/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
