--- a/.gitattributes
+++ b/.gitattributes
@@ -638,6 +638,7 @@
 /dynamic-layout-inspector/agent/transport/BUILD filter=lfs diff=lfs merge=lfs -text
 /dynamic-layout-inspector/skia/BUILD filter=lfs diff=lfs merge=lfs -text
 /dynamic-layout-inspector/skia/proto/BUILD filter=lfs diff=lfs merge=lfs -text
+/bazel/perfetto_cfg/OWNERS filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
