--- a/.gitattributes
+++ b/.gitattributes
@@ -646,6 +646,8 @@
 /utp/android-test-plugin-host-device-info-proto/BUILD filter=lfs diff=lfs merge=lfs -text
 /utp/android-test-plugin-host-device-info/BUILD filter=lfs diff=lfs merge=lfs -text
 *.HostPlugin filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-host-retention-proto/BUILD filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-host-retention/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
