--- a/.gitattributes
+++ b/.gitattributes
@@ -648,6 +648,7 @@
 *.HostPlugin filter=lfs diff=lfs merge=lfs -text
 /utp/android-test-plugin-host-retention-proto/BUILD filter=lfs diff=lfs merge=lfs -text
 /utp/android-test-plugin-host-retention/BUILD filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-host-retention-proto/NOTICE filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
