Create a new version of all repo xml schemas
This just copies the existing schema to a new version. It's not a useful
change without follow-ups to make modifications to the new schema.
The anticipated changes to be made for v2 are:
- change host-bits to host-arch with values x86, x64, and aarch64
- add "soft" flag on dependencies
- allow repeated <tag>s on system images
- allow sha256 shas
- maybe something to support mainline modules?

In this change we also add manually-run BUILD rules to generate the
java code for a schema, including for any dependant schemas.

Test: pending
Bug: 177929448
Change-Id: I0573b8f768d04cef79026f588c16773948dde489

--- a/.gitattributes
+++ b/.gitattributes
@@ -664,6 +664,7 @@
 /utp/android-test-plugin-result-listener-gradle-proto/NOTICE filter=lfs diff=lfs merge=lfs -text
 /utp/android-test-plugin-result-listener-gradle/BUILD filter=lfs diff=lfs merge=lfs -text
 *.TestResultListener filter=lfs diff=lfs merge=lfs -text
+/jaxb-inheritance-plugin/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
