--- a/.gitattributes
+++ b/.gitattributes
@@ -660,6 +660,10 @@
 /app-inspection/inspectors/network/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
 /dynamic-layout-inspector/agent/transport/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
 /dynamic-layout-inspector/agent/appinspection/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-result-listener-gradle-proto/BUILD filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-result-listener-gradle-proto/NOTICE filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-result-listener-gradle/BUILD filter=lfs diff=lfs merge=lfs -text
+*.TestResultListener filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
