Set up fake-android module in network-inspector
This change adds a fake-android module inside network-inspector.

Test: n/a
Bug: 178232811
Change-Id: I5ccc859af93ac79572492d57ee2949b833d4f742

--- a/.gitattributes
+++ b/.gitattributes
@@ -655,6 +655,7 @@
 /network-inspector/BUILD filter=lfs diff=lfs merge=lfs -text
 *.test-apk filter=lfs diff=lfs merge=lfs -text
 *.idsig filter=lfs diff=lfs merge=lfs -text
+/network-inspector/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
