Move fake-android under transport/
... and update all references to the new location.

It turns out, as I get ready to write tests for the app-inspection
agent, that I'll need to modify fake-android a bit (Looper stuff), but
this has already started breaking the transport agent tests, so I've
backed off. This seems to me to be a sign that each module should have
its own fake-android module, so I will be forking this code in a
follwup change.

Bug: N/A
Test: N/A
Change-Id: I1163133562ec1ed396540bf24694630f39b92987

--- a/.gitattributes
+++ b/.gitattributes
@@ -658,6 +658,7 @@
 /network-inspector/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
 /app-inspection/inspectors/network/BUILD filter=lfs diff=lfs merge=lfs -text
 /app-inspection/inspectors/network/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
+/dynamic-layout-inspector/agent/transport/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
