--- a/.gitattributes
+++ b/.gitattributes
@@ -665,6 +665,8 @@
 /utp/android-test-plugin-result-listener-gradle/BUILD filter=lfs diff=lfs merge=lfs -text
 *.TestResultListener filter=lfs diff=lfs merge=lfs -text
 /jaxb-inheritance-plugin/BUILD filter=lfs diff=lfs merge=lfs -text
+/app-inspection/inspectors/backgroundtask/BUILD filter=lfs diff=lfs merge=lfs -text
+/app-inspection/inspectors/backgroundtask/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
