disambiguate the unit test and android test manifest
having separate code generator for unit test and instrumented test
manifest generation allows for cleaning up some CreationConfig
interfaces that generously gave access to instrunmented related
settings even in unit tests environment.

moved APIs related to instrumented tests to a InstrumentedCreationConfig
which is only implemented by AndroidTestConfig and TestVariantConfig which
mean only use Variant API settings

removed all access to VariantDslInfo from processTestManifest and
handle property unit test versus instrumented test requirements.
A future enhancement could be to create 2 tasks implementation and
only instantiate one of them depending on the variant type.

Test: Existing.
Bug: N/A
Change-Id: Ic9dd6ef1123e564f0f7f5444c3dbadf173125dfe

--- a/.gitattributes
+++ b/.gitattributes
@@ -667,6 +667,7 @@
 /jaxb-inheritance-plugin/BUILD filter=lfs diff=lfs merge=lfs -text
 /app-inspection/inspectors/backgroundtask/BUILD filter=lfs diff=lfs merge=lfs -text
 /app-inspection/inspectors/backgroundtask/fake-android/BUILD filter=lfs diff=lfs merge=lfs -text
+*.UnitTestTemplate filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
