--- a/.gitattributes
+++ b/.gitattributes
@@ -670,6 +670,7 @@
 *.UnitTestTemplate filter=lfs diff=lfs merge=lfs -text
 *.skp filter=lfs diff=lfs merge=lfs -text
 *.bazelrc filter=lfs diff=lfs merge=lfs -text
+/bazel/platforms/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
