--- a/.gitattributes
+++ b/.gitattributes
@@ -671,6 +671,10 @@
 *.skp filter=lfs diff=lfs merge=lfs -text
 *.bazelrc filter=lfs diff=lfs merge=lfs -text
 /bazel/platforms/BUILD filter=lfs diff=lfs merge=lfs -text
+/bazel/rbe/BUILD filter=lfs diff=lfs merge=lfs -text
+/bazel/rbe/docker/Dockerfile filter=lfs diff=lfs merge=lfs -text
+/bazel/rbe/docker_windows/Dockerfile filter=lfs diff=lfs merge=lfs -text
+/bazel/rbe/docker_windows/README filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
