Add coroutine debugger agent
This change creates a new folder for the coroutine debugger
agent and adds the agent itself.

Test: Will add in later CL
Bug: 182023904
Change-Id: Ib8f5be10c083ffcdd7ec030d47729b3138b67705

--- a/.gitattributes
+++ b/.gitattributes
@@ -676,6 +676,7 @@
 /bazel/rbe/docker_windows/Dockerfile filter=lfs diff=lfs merge=lfs -text
 /bazel/rbe/docker_windows/README filter=lfs diff=lfs merge=lfs -text
 /bazel/repolinker/BUILD filter=lfs diff=lfs merge=lfs -text
+/debug/coroutine/native/agent/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
