--- a/.gitattributes
+++ b/.gitattributes
@@ -680,6 +680,7 @@
 /app-inspection/inspectors/common/BUILD filter=lfs diff=lfs merge=lfs -text
 /transport/native/jvmti/BUILD filter=lfs diff=lfs merge=lfs -text
 /profgen/BUILD filter=lfs diff=lfs merge=lfs -text
+/bazel/lnzipper/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
