--- a/.gitattributes
+++ b/.gitattributes
@@ -685,6 +685,7 @@
 /profgen/profgen-cli/BUILD filter=lfs diff=lfs merge=lfs -text
 /utp/android-test-plugin-host-logcat/BUILD filter=lfs diff=lfs merge=lfs -text
 *.ninja_deps filter=lfs diff=lfs merge=lfs -text
+*.prof filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
