adblib: Initial commit
* IML build only to start with
* Simple logging class + test

Bug: 188067646
Test: included
Change-Id: Ia2bc6a9aea6538f7714696fd1db2e28a40c0d483

--- a/.gitattributes
+++ b/.gitattributes
@@ -686,6 +686,8 @@
 /utp/android-test-plugin-host-logcat/BUILD filter=lfs diff=lfs merge=lfs -text
 *.ninja_deps filter=lfs diff=lfs merge=lfs -text
 *.prof filter=lfs diff=lfs merge=lfs -text
+/adblib/BUILD filter=lfs diff=lfs merge=lfs -text
+/adblib/OWNERS filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
