--- a/.gitattributes
+++ b/.gitattributes
@@ -692,6 +692,9 @@
 /resource-repository/BUILD filter=lfs diff=lfs merge=lfs -text
 /resource-repository/test/resources/BUILD filter=lfs diff=lfs merge=lfs -text
 /resource-repository/test/resources/aar/design_aar/README filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-host-coverage-proto/BUILD filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-host-coverage-proto/NOTICE filter=lfs diff=lfs merge=lfs -text
+/utp/android-test-plugin-host-coverage/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
