--- a/.gitattributes
+++ b/.gitattributes
@@ -698,6 +698,7 @@
 /third_party/kotlin/1_4_32/BUILD filter=lfs diff=lfs merge=lfs -text
 /third_party/kotlin/for_agp/BUILD filter=lfs diff=lfs merge=lfs -text
 /third_party/kotlin/for_ide_plugin/BUILD filter=lfs diff=lfs merge=lfs -text
+/third_party/kotlin/1_5_10/BUILD filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
 bazel/prebuilts/mac/bazel-real filter=lfs diff=lfs merge=lfs -text
 profiler/native/testdata/dex/expected/large.code_coverage filter=lfs diff=lfs merge=lfs -text
